<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvPegawai"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:background="@android:color/white"
    tools:context="com.ezaa.laundry.pegawai.DataPegawaiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvCardPegawaiID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_id"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvCardPegawaiNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_nama"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvCardPegawaiAlamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_alamat"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvCardPegawaiNoHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_no_hp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvCardPegawaiTerdaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_terdaftar"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="-13dp"/>

        <TextView
            android:id="@+id/tvCardPegawaiCabang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_cabang"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="-8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnCardPelangganHubungi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_pegawai_hubungi"
                android:backgroundTint="#4fb141"
                android:textColor="@android:color/white"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnCardPelangganLihat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_pegawai_lihat"
                android:backgroundTint="@android:color/holo_orange_light"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
