<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_data_pelanggan"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:background="@android:color/white"
    tools:context="com.ezaa.laundry.pelanggan.DataPelangganActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCardPelangganID"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#008000"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/card_pelanggan_id"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvCardNamaPelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_nama"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvCardPelangganAlamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_alamat"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tvCardPelangganNoHp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_no_hp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_CABANG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabang"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="-13dp"/>

<!--       / <TextView-->
<!--            android:id="@+id/tvCardPelangganTerdaftar"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/card_pelanggan_terdaftar"-->
<!--            android:textSize="14sp"-->
<!--            android:textColor="@android:color/black"-->
<!--            android:layout_marginBottom="12dp"-->
<!--            android:layout_marginTop="-13dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnCardPelangganHubungi1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_pelanggan_hubungi"
                android:backgroundTint="#4fb141"
                android:textColor="@android:color/white"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnCardPelangganLihat1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_pelanggan_lihat"
                android:backgroundTint="@android:color/holo_orange_light"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
