<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tambah_tambahan"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context="com.ezaa.laundry.tambahan.TambahTambahanActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTambahTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambahantambah"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/tvNamaTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/card_tambahan_nama"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="7dp" />

    <!-- Full Name Input -->
    <EditText
        android:id="@+id/etNamaTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_tambahan_nama"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text" />

    <TextView
        android:id="@+id/tvHargaTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/harga"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="7dp" />

    <!-- Phone Number Input -->
    <EditText
        android:id="@+id/etHargaTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/harga"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:inputType="number"
        android:background="@android:drawable/edit_text" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/btSimpanTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:layout_marginTop="20dp"
        android:backgroundTint="#25ff04"
        android:textColor="@android:color/white"/>

</LinearLayout>
