<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/tambah_pelanggan"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context="com.ezaa.laundry.pelanggan.TambahanPelangganActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tvJudulTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_tambahpelanggan"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/tvNamaTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/card_pelanggan_nama"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="15dp" />

    <!-- Full Name Input -->
    <EditText
        android:id="@+id/etNamaTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="9dp"
        android:hint="@string/card_pelanggan_nama"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text" />

    <TextView
        android:id="@+id/tvAlamatTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/card_pelanggan_alamat"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="15dp" />

    <!-- Address Input -->
    <EditText
        android:id="@+id/etAlamatTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="9dp"
        android:hint="@string/card_pelanggan_alamat"
        android:textColorHint="@color/black"
        android:inputType="textPostalAddress"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/edit_text" />

    <TextView
        android:id="@+id/tvNoHpTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/card_pelanggan_no_hp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="15dp" />

    <!-- Phone Number Input -->
    <EditText
        android:id="@+id/etNoHpTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="9dp"
        android:hint="@string/card_pelanggan_no_hp"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:inputType="phone"
        android:maxLength="14"
        android:background="@android:drawable/edit_text" />

    <TextView
        android:id="@+id/tvCabangTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cabang"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="15dp" />

    <!-- Phone Number Input -->
    <EditText
        android:id="@+id/etCabangTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="9dp"
        android:hint="@string/cabang"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/edit_text" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/btSimpanTambahPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/simpan"
        android:layout_marginTop="20dp"
        android:backgroundTint="#25ff04"
        android:textColor="@android:color/white"/>

</LinearLayout>
